--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==8.2.1
 curl_cffi==0.12.0
 dotenv==0.9.9
 Flask==3.1.1
+flask-cors==6.0.1
 Flask-SQLAlchemy==3.1.1
 frozendict==2.4.6
 greenlet==3.2.3
